tests/ui/parser/range-3.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `..`
  --> $DIR/range-3.rs:4:17
   |
LL |     let r = 1..2..3;
   |                 ^^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to 1 previous error

